Crash when deleting tool node group from outliner #115037

Closed
opened 2023-11-17 10:00:41 +01:00 by Ralph Wiedemeier · 2 comments

System Information
Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.02

Blender Version
Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: 878f71061b8e
Worked: n/a

Short description of error
Creating a node group in tool mode and then deleting the group in the outliner crashes the application.
This doesn't happen with node groups in modifier mode.

Exact steps for others to reproduce the error

  1. Start new project.
  2. Switch to geometry nodes view.
  3. In the node editor, switch mode to "Tool".
  4. Click "New" to create a new node group.
  5. Switch the outliner to "Blender file" mode.
  6. In "Node Groups", right-click the new "Tool" object and select "Delete".
**System Information** Operating system: Linux-6.2.0-36-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.29.02 **Blender Version** Broken: version: 4.0.0, branch: blender-v4.0-release, commit date: 2023-11-13 17:26, hash: `878f71061b8e` Worked: n/a **Short description of error** Creating a node group in tool mode and then deleting the group in the outliner crashes the application. This doesn't happen with node groups in modifier mode. **Exact steps for others to reproduce the error** 1. Start new project. 2. Switch to geometry nodes view. 3. In the node editor, switch mode to "Tool". 4. Click "New" to create a new node group. 5. Switch the outliner to "Blender file" mode. 6. In "Node Groups", right-click the new "Tool" object and select "Delete".
Ralph Wiedemeier added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-17 10:00:41 +01:00
Iliya Katushenock added the
Interest
Geometry Nodes
Interest
Nodes & Physics
labels 2023-11-17 10:36:44 +01:00
Member

Thanks for the report. Can confirm the crash.

Thanks for the report. Can confirm the crash.
Pratik Borhade changed title from Crash when deleting tool node group to Crash when deleting tool node group from outliner 2023-11-17 11:42:12 +01:00
Member

This involves data-management. We've freed the id in outliner_id_operation_exec/id_free then the same data was accessed by snode->geometry_nodes_tool_tree in geometry_node_tree_get_from_context which triggered the crash further

This involves data-management. We've freed the id in `outliner_id_operation_exec/id_free` then the same data was accessed by `snode->geometry_nodes_tool_tree` in `geometry_node_tree_get_from_context` which triggered the crash further
Philipp Oeser self-assigned this 2023-11-22 14:40:30 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-30 15:48:56 +01:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-11-30 15:49:22 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115037
No description provided.