Fix #115037: Crash deleting tool node group from outliner

Prevent heap-use-after-free of SpaceNode `geometry_nodes_tool_tree`,
setting it to null.

(not entirely sure if this is the right place to do it though)