source/blender/editors/space_node/space_node.cc
@@ -1155,6 +1155,12 @@ static void node_id_remap_cb(ID *old_id, ID *new_id, void *user_data)
     }
   }
   else if (GS(old_id->name) == ID_NT) {
+
+    if ((snode->geometry_nodes_type == SNODE_GEOMETRY_TOOL) && (new_id == nullptr)) {
+      snode->geometry_nodes_tool_tree = nullptr;
+      return;
+    }
+
     bNodeTreePath *path, *path_next;
 
     for (path = (bNodeTreePath *)snode->treepath.first; path; path = path->next) {
